test/org/midica/testfiles/failing/include-soundfont-inside-block.midica
INCLUDE inc/instruments.midica

0 c /4

{
	SOUNDBANK ../working/java-emergency-soundfont.sf2
}
